test push after server backup

--- a/test.ipynb
+++ b/test.ipynb
@@ -484,6 +484,15 @@
     "\n",
     "print(b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('test push')"
+   ]
   }
  ],
  "metadata": {
