--- a/test.ipynb
+++ b/test.ipynb
@@ -493,6 +493,29 @@
    "source": [
     "print('test push')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.0000, 0.0000],\n",
+      "        [0.5331, 0.0000]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "a = torch.randn((2, 2))\n",
+    "b = a.relu()\n",
+    "\n",
+    "print(b)"
+   ]
   }
  ],
  "metadata": {
@@ -500,7 +523,7 @@
    "hash": "d2e5a2fc120aea8fd8e3ca8a0be3a7cabdd6ecdbf637db27c66d81d888c5bd17"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('torch')",
+   "display_name": "Python 3.10.4 ('torch')",
    "language": "python",
    "name": "python3"
   },
@@ -514,7 +537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
